--- a/apps/mars-rover/src/app/exercise/exercise.component.html
+++ b/apps/mars-rover/src/app/exercise/exercise.component.html
@@ -22,14 +22,26 @@
     </mat-expansion-panel-header>
     <h3>The page "/marsrover" shows a landscape and the mars rover.</h3>
     <ul>
-      <li>Add commands (turn, move) to the page, to be able to control the movements.</li>
+      <li>Add command to change the direction of the mars rover.</li>
+    </ul>
+  </mat-expansion-panel>
+
+  <mat-expansion-panel>
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        Exercise 3
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <h3>The page "/marsrover" shows a landscape and the mars rover.</h3>
+    <ul>
+      <li>Add command to move the mars rover 1 field.</li>
     </ul>
   </mat-expansion-panel>
 
   <mat-expansion-panel *ngIf="false">
     <mat-expansion-panel-header>
       <mat-panel-title>
-        Exercise 3
+        Exercise 4
       </mat-panel-title>
     </mat-expansion-panel-header>
     <h3>The mars rover should analyse rocks. While analyzing it can't move or turn, but the commands are queued and processed afterwards.</h3>
